--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "commander": "^10.0.0",
     "ejs": "^3.1.10",
     "ffmpeg": "^0.0.4",
-    "playwright": "^1.57.0-alpha-2025-10-24",
+    "playwright": "next",
     "playwright-webkit": "^1.56.1"
   }
 }
